[package]
name = "edgeblog"
version = "0.1.0"
authors = ["osyoyu <osyoyu@osyoyu.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
http_guest = { path = "../terrarium-rust-guest" }
minisearch = { path = "../minisearch" }

comrak = "0.6"
failure = "0.1.5"
lazy_static = "1.3.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinysegmenter = "0.1"
